cmake_minimum_required(VERSION 3.8)
project(BufMgr)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        docs/search/all_0.html
        docs/search/all_0.js
        docs/search/all_1.html
        docs/search/all_1.js
        docs/search/all_10.html
        docs/search/all_10.js
        docs/search/all_11.html
        docs/search/all_11.js
        docs/search/all_12.html
        docs/search/all_12.js
        docs/search/all_13.html
        docs/search/all_13.js
        docs/search/all_2.html
        docs/search/all_2.js
        docs/search/all_3.html
        docs/search/all_3.js
        docs/search/all_4.html
        docs/search/all_4.js
        docs/search/all_5.html
        docs/search/all_5.js
        docs/search/all_6.html
        docs/search/all_6.js
        docs/search/all_61.html
        docs/search/all_61.js
        docs/search/all_62.html
        docs/search/all_62.js
        docs/search/all_63.html
        docs/search/all_63.js
        docs/search/all_64.html
        docs/search/all_64.js
        docs/search/all_65.html
        docs/search/all_65.js
        docs/search/all_66.html
        docs/search/all_66.js
        docs/search/all_67.html
        docs/search/all_67.js
        docs/search/all_68.html
        docs/search/all_68.js
        docs/search/all_69.html
        docs/search/all_69.js
        docs/search/all_6c.html
        docs/search/all_6c.js
        docs/search/all_6d.html
        docs/search/all_6d.js
        docs/search/all_6e.html
        docs/search/all_6e.js
        docs/search/all_6f.html
        docs/search/all_6f.js
        docs/search/all_7.html
        docs/search/all_7.js
        docs/search/all_70.html
        docs/search/all_70.js
        docs/search/all_72.html
        docs/search/all_72.js
        docs/search/all_73.html
        docs/search/all_73.js
        docs/search/all_75.html
        docs/search/all_75.js
        docs/search/all_76.html
        docs/search/all_76.js
        docs/search/all_77.html
        docs/search/all_77.js
        docs/search/all_7e.html
        docs/search/all_7e.js
        docs/search/all_8.html
        docs/search/all_8.js
        docs/search/all_9.html
        docs/search/all_9.js
        docs/search/all_a.html
        docs/search/all_a.js
        docs/search/all_b.html
        docs/search/all_b.js
        docs/search/all_c.html
        docs/search/all_c.js
        docs/search/all_d.html
        docs/search/all_d.js
        docs/search/all_e.html
        docs/search/all_e.js
        docs/search/all_f.html
        docs/search/all_f.js
        docs/search/classes_0.html
        docs/search/classes_0.js
        docs/search/classes_1.html
        docs/search/classes_1.js
        docs/search/classes_2.html
        docs/search/classes_2.js
        docs/search/classes_3.html
        docs/search/classes_3.js
        docs/search/classes_4.html
        docs/search/classes_4.js
        docs/search/classes_5.html
        docs/search/classes_5.js
        docs/search/classes_6.html
        docs/search/classes_6.js
        docs/search/classes_62.html
        docs/search/classes_62.js
        docs/search/classes_66.html
        docs/search/classes_66.js
        docs/search/classes_68.html
        docs/search/classes_68.js
        docs/search/classes_69.html
        docs/search/classes_69.js
        docs/search/classes_70.html
        docs/search/classes_70.js
        docs/search/classes_72.html
        docs/search/classes_72.js
        docs/search/classes_73.html
        docs/search/classes_73.js
        docs/search/close.png
        docs/search/functions_0.html
        docs/search/functions_0.js
        docs/search/functions_1.html
        docs/search/functions_1.js
        docs/search/functions_10.html
        docs/search/functions_10.js
        docs/search/functions_11.html
        docs/search/functions_11.js
        docs/search/functions_12.html
        docs/search/functions_12.js
        docs/search/functions_2.html
        docs/search/functions_2.js
        docs/search/functions_3.html
        docs/search/functions_3.js
        docs/search/functions_4.html
        docs/search/functions_4.js
        docs/search/functions_5.html
        docs/search/functions_5.js
        docs/search/functions_6.html
        docs/search/functions_6.js
        docs/search/functions_61.html
        docs/search/functions_61.js
        docs/search/functions_62.html
        docs/search/functions_62.js
        docs/search/functions_63.html
        docs/search/functions_63.js
        docs/search/functions_64.html
        docs/search/functions_64.js
        docs/search/functions_65.html
        docs/search/functions_65.js
        docs/search/functions_66.html
        docs/search/functions_66.js
        docs/search/functions_67.html
        docs/search/functions_67.js
        docs/search/functions_68.html
        docs/search/functions_68.js
        docs/search/functions_69.html
        docs/search/functions_69.js
        docs/search/functions_6c.html
        docs/search/functions_6c.js
        docs/search/functions_6d.html
        docs/search/functions_6d.js
        docs/search/functions_6e.html
        docs/search/functions_6e.js
        docs/search/functions_6f.html
        docs/search/functions_6f.js
        docs/search/functions_7.html
        docs/search/functions_7.js
        docs/search/functions_70.html
        docs/search/functions_70.js
        docs/search/functions_72.html
        docs/search/functions_72.js
        docs/search/functions_73.html
        docs/search/functions_73.js
        docs/search/functions_75.html
        docs/search/functions_75.js
        docs/search/functions_77.html
        docs/search/functions_77.js
        docs/search/functions_7e.html
        docs/search/functions_7e.js
        docs/search/functions_8.html
        docs/search/functions_8.js
        docs/search/functions_9.html
        docs/search/functions_9.js
        docs/search/functions_a.html
        docs/search/functions_a.js
        docs/search/functions_b.html
        docs/search/functions_b.js
        docs/search/functions_c.html
        docs/search/functions_c.js
        docs/search/functions_d.html
        docs/search/functions_d.js
        docs/search/functions_e.html
        docs/search/functions_e.js
        docs/search/functions_f.html
        docs/search/functions_f.js
        docs/search/mag_sel.png
        docs/search/namespaces_0.html
        docs/search/namespaces_0.js
        docs/search/namespaces_62.html
        docs/search/namespaces_62.js
        docs/search/nomatches.html
        docs/search/pages_0.html
        docs/search/pages_0.js
        docs/search/related_0.html
        docs/search/related_0.js
        docs/search/related_6f.html
        docs/search/related_6f.js
        docs/search/search.css
        docs/search/search.js
        docs/search/search_l.png
        docs/search/search_m.png
        docs/search/search_r.png
        docs/search/searchdata.js
        docs/search/typedefs_0.html
        docs/search/typedefs_0.js
        docs/search/typedefs_1.html
        docs/search/typedefs_1.js
        docs/search/typedefs_2.html
        docs/search/typedefs_2.js
        docs/search/typedefs_66.html
        docs/search/typedefs_66.js
        docs/search/typedefs_70.html
        docs/search/typedefs_70.js
        docs/search/typedefs_73.html
        docs/search/typedefs_73.js
        docs/search/variables_0.html
        docs/search/variables_0.js
        docs/search/variables_1.html
        docs/search/variables_1.js
        docs/search/variables_2.html
        docs/search/variables_2.js
        docs/search/variables_3.html
        docs/search/variables_3.js
        docs/search/variables_4.html
        docs/search/variables_4.js
        docs/search/variables_5.html
        docs/search/variables_5.js
        docs/search/variables_6.html
        docs/search/variables_6.js
        docs/search/variables_61.html
        docs/search/variables_61.js
        docs/search/variables_62.html
        docs/search/variables_62.js
        docs/search/variables_63.html
        docs/search/variables_63.js
        docs/search/variables_64.html
        docs/search/variables_64.js
        docs/search/variables_66.html
        docs/search/variables_66.js
        docs/search/variables_69.html
        docs/search/variables_69.js
        docs/search/variables_6d.html
        docs/search/variables_6d.js
        docs/search/variables_6e.html
        docs/search/variables_6e.js
        docs/search/variables_7.html
        docs/search/variables_7.js
        docs/search/variables_70.html
        docs/search/variables_70.js
        docs/search/variables_72.html
        docs/search/variables_72.js
        docs/search/variables_73.html
        docs/search/variables_73.js
        docs/search/variables_75.html
        docs/search/variables_75.js
        docs/search/variables_76.html
        docs/search/variables_76.js
        docs/search/variables_8.html
        docs/search/variables_8.js
        docs/search/variables_9.html
        docs/search/variables_9.js
        docs/search/variables_a.html
        docs/search/variables_a.js
        docs/search/variables_b.html
        docs/search/variables_b.js
        docs/search/variables_c.html
        docs/search/variables_c.js
        docs/annotated.html
        docs/arrowdown.png
        docs/arrowright.png
        docs/bad__buffer__exception_8cpp-source.html
        docs/bad__buffer__exception_8cpp_source.html
        docs/bad__buffer__exception_8h-source.html
        docs/bad__buffer__exception_8h_source.html
        docs/badgerdb__exception_8cpp-source.html
        docs/badgerdb__exception_8cpp_source.html
        docs/badgerdb__exception_8h-source.html
        docs/badgerdb__exception_8h_source.html
        docs/bc_s.png
        docs/bdwn.png
        docs/buf_hash_tbl_8cpp-source.html
        docs/buf_hash_tbl_8cpp_source.html
        docs/buf_hash_tbl_8h-source.html
        docs/buf_hash_tbl_8h_source.html
        docs/buffer_8cpp-source.html
        docs/buffer_8cpp_source.html
        docs/buffer_8h-source.html
        docs/buffer_8h_source.html
        docs/buffer__exceeded__exception_8cpp-source.html
        docs/buffer__exceeded__exception_8cpp_source.html
        docs/buffer__exceeded__exception_8h-source.html
        docs/buffer__exceeded__exception_8h_source.html
        docs/classbadgerdb_1_1_bad_buffer_exception-members.html
        docs/classbadgerdb_1_1_bad_buffer_exception.html
        docs/classbadgerdb_1_1_bad_buffer_exception.png
        docs/classbadgerdb_1_1_badger_db_exception-members.html
        docs/classbadgerdb_1_1_badger_db_exception.html
        docs/classbadgerdb_1_1_badger_db_exception.png
        docs/classbadgerdb_1_1_buf_desc-members.html
        docs/classbadgerdb_1_1_buf_desc.html
        docs/classbadgerdb_1_1_buf_hash_tbl-members.html
        docs/classbadgerdb_1_1_buf_hash_tbl.html
        docs/classbadgerdb_1_1_buf_mgr-members.html
        docs/classbadgerdb_1_1_buf_mgr.html
        docs/classbadgerdb_1_1_buffer_exceeded_exception-members.html
        docs/classbadgerdb_1_1_buffer_exceeded_exception.html
        docs/classbadgerdb_1_1_buffer_exceeded_exception.png
        docs/classbadgerdb_1_1_file-members.html
        docs/classbadgerdb_1_1_file.html
        docs/classbadgerdb_1_1_file_exists_exception-members.html
        docs/classbadgerdb_1_1_file_exists_exception.html
        docs/classbadgerdb_1_1_file_exists_exception.png
        docs/classbadgerdb_1_1_file_iterator-members.html
        docs/classbadgerdb_1_1_file_iterator.html
        docs/classbadgerdb_1_1_file_not_found_exception-members.html
        docs/classbadgerdb_1_1_file_not_found_exception.html
        docs/classbadgerdb_1_1_file_not_found_exception.png
        docs/classbadgerdb_1_1_file_open_exception-members.html
        docs/classbadgerdb_1_1_file_open_exception.html
        docs/classbadgerdb_1_1_file_open_exception.png
        docs/classbadgerdb_1_1_hash_already_present_exception-members.html
        docs/classbadgerdb_1_1_hash_already_present_exception.html
        docs/classbadgerdb_1_1_hash_already_present_exception.png
        docs/classbadgerdb_1_1_hash_not_found_exception-members.html
        docs/classbadgerdb_1_1_hash_not_found_exception.html
        docs/classbadgerdb_1_1_hash_not_found_exception.png
        docs/classbadgerdb_1_1_hash_table_exception-members.html
        docs/classbadgerdb_1_1_hash_table_exception.html
        docs/classbadgerdb_1_1_hash_table_exception.png
        docs/classbadgerdb_1_1_insufficient_space_exception-members.html
        docs/classbadgerdb_1_1_insufficient_space_exception.html
        docs/classbadgerdb_1_1_insufficient_space_exception.png
        docs/classbadgerdb_1_1_invalid_page_exception-members.html
        docs/classbadgerdb_1_1_invalid_page_exception.html
        docs/classbadgerdb_1_1_invalid_page_exception.png
        docs/classbadgerdb_1_1_invalid_record_exception-members.html
        docs/classbadgerdb_1_1_invalid_record_exception.html
        docs/classbadgerdb_1_1_invalid_record_exception.png
        docs/classbadgerdb_1_1_invalid_slot_exception-members.html
        docs/classbadgerdb_1_1_invalid_slot_exception.html
        docs/classbadgerdb_1_1_invalid_slot_exception.png
        docs/classbadgerdb_1_1_page-members.html
        docs/classbadgerdb_1_1_page.html
        docs/classbadgerdb_1_1_page_iterator-members.html
        docs/classbadgerdb_1_1_page_iterator.html
        docs/classbadgerdb_1_1_page_not_pinned_exception-members.html
        docs/classbadgerdb_1_1_page_not_pinned_exception.html
        docs/classbadgerdb_1_1_page_not_pinned_exception.png
        docs/classbadgerdb_1_1_page_pinned_exception-members.html
        docs/classbadgerdb_1_1_page_pinned_exception.html
        docs/classbadgerdb_1_1_page_pinned_exception.png
        docs/classbadgerdb_1_1_slot_in_use_exception-members.html
        docs/classbadgerdb_1_1_slot_in_use_exception.html
        docs/classbadgerdb_1_1_slot_in_use_exception.png
        docs/classes.html
        docs/closed.png
        docs/dir_1f9667bec0da3ce64b870360a7169c8b.html
        docs/dir_352faf89980c62c012c0a84d77529aea.html
        docs/dir_504991088fc6d9c1cb9346ba8175211c.html
        docs/dir_5f762f2f27188f96ef536226e286184b.html
        docs/dir_7ff97ed0dfc712c294bf3a23b720b7e3.html
        docs/dir_821184219a253965a10828a0056272d4.html
        docs/dir_9cf470274026b5b5f95f33e5ea3cd378.html
        docs/dir_c6037ce3d3c0e07c161ef31db4b00af2.html
        docs/dir_d2737fb8c86013b743351eb63d107c0b.html
        docs/dir_fb3f3380989716e9329bc5aa22e747fb.html
        docs/dir_ffa8011cbb6779b73c9e45f2b5eaeb12.html
        docs/doc.png
        docs/doxygen.css
        docs/doxygen.png
        docs/dynsections.js
        docs/file_8cpp-source.html
        docs/file_8cpp_source.html
        docs/file_8h-source.html
        docs/file_8h_source.html
        docs/file__exists__exception_8cpp-source.html
        docs/file__exists__exception_8cpp_source.html
        docs/file__exists__exception_8h-source.html
        docs/file__exists__exception_8h_source.html
        docs/file__iterator_8h-source.html
        docs/file__iterator_8h_source.html
        docs/file__not__found__exception_8cpp-source.html
        docs/file__not__found__exception_8cpp_source.html
        docs/file__not__found__exception_8h-source.html
        docs/file__not__found__exception_8h_source.html
        docs/file__open__exception_8cpp-source.html
        docs/file__open__exception_8cpp_source.html
        docs/file__open__exception_8h-source.html
        docs/file__open__exception_8h_source.html
        docs/files.html
        docs/folderclosed.png
        docs/folderopen.png
        docs/functions.html
        docs/functions_func.html
        docs/functions_rela.html
        docs/functions_vars.html
        docs/hash__already__present__exception_8cpp-source.html
        docs/hash__already__present__exception_8cpp_source.html
        docs/hash__already__present__exception_8h-source.html
        docs/hash__already__present__exception_8h_source.html
        docs/hash__not__found__exception_8cpp-source.html
        docs/hash__not__found__exception_8cpp_source.html
        docs/hash__not__found__exception_8h-source.html
        docs/hash__not__found__exception_8h_source.html
        docs/hash__table__exception_8cpp-source.html
        docs/hash__table__exception_8cpp_source.html
        docs/hash__table__exception_8h-source.html
        docs/hash__table__exception_8h_source.html
        docs/hierarchy.html
        docs/index.html
        docs/installdox
        docs/insufficient__space__exception_8cpp-source.html
        docs/insufficient__space__exception_8cpp_source.html
        docs/insufficient__space__exception_8h-source.html
        docs/insufficient__space__exception_8h_source.html
        docs/invalid__page__exception_8cpp-source.html
        docs/invalid__page__exception_8cpp_source.html
        docs/invalid__page__exception_8h-source.html
        docs/invalid__page__exception_8h_source.html
        docs/invalid__record__exception_8cpp-source.html
        docs/invalid__record__exception_8cpp_source.html
        docs/invalid__record__exception_8h-source.html
        docs/invalid__record__exception_8h_source.html
        docs/invalid__slot__exception_8cpp-source.html
        docs/invalid__slot__exception_8cpp_source.html
        docs/invalid__slot__exception_8h-source.html
        docs/invalid__slot__exception_8h_source.html
        docs/jquery.js
        docs/main_8cpp-source.html
        docs/main_8cpp_source.html
        docs/main_8hpp-source.html
        docs/main_8hpp_source.html
        docs/namespacebadgerdb.html
        docs/namespacemembers.html
        docs/namespacemembers_type.html
        docs/namespaces.html
        docs/nav_f.png
        docs/nav_g.png
        docs/nav_h.png
        docs/open.png
        docs/page_8cpp-source.html
        docs/page_8cpp_source.html
        docs/page_8h-source.html
        docs/page_8h_source.html
        docs/page__iterator_8h-source.html
        docs/page__iterator_8h_source.html
        docs/page__not__pinned__exception_8cpp-source.html
        docs/page__not__pinned__exception_8cpp_source.html
        docs/page__not__pinned__exception_8h-source.html
        docs/page__not__pinned__exception_8h_source.html
        docs/page__pinned__exception_8cpp-source.html
        docs/page__pinned__exception_8cpp_source.html
        docs/page__pinned__exception_8h-source.html
        docs/page__pinned__exception_8h_source.html
        docs/search.idx
        docs/search.php
        docs/slot__in__use__exception_8cpp-source.html
        docs/slot__in__use__exception_8cpp_source.html
        docs/slot__in__use__exception_8h-source.html
        docs/slot__in__use__exception_8h_source.html
        docs/splitbar.png
        docs/structbadgerdb_1_1_buf_stats-members.html
        docs/structbadgerdb_1_1_buf_stats.html
        docs/structbadgerdb_1_1_file_header-members.html
        docs/structbadgerdb_1_1_file_header.html
        docs/structbadgerdb_1_1_page_header-members.html
        docs/structbadgerdb_1_1_page_header.html
        docs/structbadgerdb_1_1_page_slot-members.html
        docs/structbadgerdb_1_1_page_slot.html
        docs/structbadgerdb_1_1_record_id-members.html
        docs/structbadgerdb_1_1_record_id.html
        docs/structbadgerdb_1_1hash_bucket-members.html
        docs/structbadgerdb_1_1hash_bucket.html
        docs/sync_off.png
        docs/sync_on.png
        docs/tab_a.png
        docs/tab_b.gif
        docs/tab_b.png
        docs/tab_h.png
        docs/tab_l.gif
        docs/tab_r.gif
        docs/tab_s.png
        docs/tabs.css
        docs/types_8h-source.html
        docs/types_8h_source.html
        src/exceptions/bad_buffer_exception.cpp
        src/exceptions/bad_buffer_exception.h
        src/exceptions/badgerdb_exception.cpp
        src/exceptions/badgerdb_exception.h
        src/exceptions/buffer_exceeded_exception.cpp
        src/exceptions/buffer_exceeded_exception.h
        src/exceptions/file_exists_exception.cpp
        src/exceptions/file_exists_exception.h
        src/exceptions/file_not_found_exception.cpp
        src/exceptions/file_not_found_exception.h
        src/exceptions/file_open_exception.cpp
        src/exceptions/file_open_exception.h
        src/exceptions/hash_already_present_exception.cpp
        src/exceptions/hash_already_present_exception.h
        src/exceptions/hash_not_found_exception.cpp
        src/exceptions/hash_not_found_exception.h
        src/exceptions/hash_table_exception.cpp
        src/exceptions/hash_table_exception.h
        src/exceptions/insufficient_space_exception.cpp
        src/exceptions/insufficient_space_exception.h
        src/exceptions/invalid_page_exception.cpp
        src/exceptions/invalid_page_exception.h
        src/exceptions/invalid_record_exception.cpp
        src/exceptions/invalid_record_exception.h
        src/exceptions/invalid_slot_exception.cpp
        src/exceptions/invalid_slot_exception.h
        src/exceptions/page_not_pinned_exception.cpp
        src/exceptions/page_not_pinned_exception.h
        src/exceptions/page_pinned_exception.cpp
        src/exceptions/page_pinned_exception.h
        src/exceptions/slot_in_use_exception.cpp
        src/exceptions/slot_in_use_exception.h
        src/badgerdb_main
        src/buffer.cpp
        src/buffer.h
        src/bufHashTbl.cpp
        src/bufHashTbl.h
        src/Contributors
        src/file.cpp
        src/file.h
        src/file_iterator.h
        src/License.txt
        src/main.cpp
        src/main.hpp
        src/page.cpp
        src/page.h
        src/page_iterator.h
        src/types.h
        Contributions.txt
        Doxyfile
        License.txt
        Makefile
        README)

add_executable(BufMgr ${SOURCE_FILES})